# QR_Network_Scanner

./: .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CONTRIBUTING.md  HELP.md  LICENSE  README.md  ROADMAP.md  build_release.py  entitlements.plist  launcher.py  pyproject.toml  test_about.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: build.yml
assets/: help.html
docs/: SECURITY.md  TEST_STRATEGY_GUI.md
scripts/: check.sh
src/qr_network/: cli.py  gui.py  main.py  network.py  scanner.py  utils.py
src/qr_network/capture/: scanner.py
src/qr_network/net/: manager.py
src/qr_network/qr/: parser.py
src/qr_network/ui/: app.py
src/qr_network/ui/components/: control_panel.py  dialogs.py  security_sheet.py  status_panel.py
tests/: test_cli.py  test_main.py  test_network.py  test_network_mocked.py  test_parser.py  test_scanner.py  test_ui_smoke.py  test_utils.py
