[project]
name = "qr-network"
version = "0.1.0-beta.6"
description = "WiFi QR Code Scanner and Network Manager for macOS"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python>=4.8.0",
    "rich>=13.0.0",
    "typer>=0.9.0",
    "numpy>=1.20.0",
    "pillow>=12.0.0",
    "zxing-cpp>=2.3.0",
]

[project.scripts]
qr-network = "qr_network.main:app"

[project.optional-dependencies]
dev = [
    "pytest",
    "pyinstaller"
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
